@@ -20,6 +20,7 @@ python-apt (0.7.92) UNRELEASED; urgency=low
   * Merge 0.7.10.4 from unstable
   * debian/control: Update Standards-Version to 3.8.2
   * Make AcquireFile a subclass of AcquireItem
+  * Make ConfigurationPtr,ConfigurationSub subclasses of Configuration.
 
   [ Sebastian Heinlein ]
   * apt/progress.py: Extract the package name from the status message
